Fixed spacing in COMP2017 page

--- a/app/globals.css
+++ b/app/globals.css
@@ -115,7 +115,6 @@ body {
 .centerContentWrapper{
   max-width: 729px;
   position: absolute;
-  top: 120px;
 }
 
 .MuiButton-outlined {
